<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">TriPlanner</string>
    <string name="vamos_planificar_a_sua_viagem">Vamos planificar a sua viagem?</string>
    <string name="quantas_pessoas">Quantas pessoas?</string>
    <string name="data_nascimento">Data nascimento</string>
    <string name="nome">Nome</string>
    <string name="gosto_musical">Gosto musical?</string>
    <string name="prefer_ncia_clim_tica">Preferência de viagem</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="city">Cidade</string>
    <string name="snow">Neve</string>
    <string name="beach">Praia</string>
    <string name="mountain">Montanha</string>
    <string name="next">Seguinte</string>
    <string name="when_next_vacations">Quando são as suas proximas férias?</string>
    <string name="back_to_home">Voltar para a Home</string>
    <string name="hire_here">Contrate aqui!</string>
    <string name="hire_a_transport">Contrate um transporte local pelo nosso aplicativo, e economize!</string>
    <string name="use_miles">Pode usar essas milhas para disminuir R$50 do coste do voo!</string>
    <string name="use_creditcard">Com um consumo de R$ 1000 por mes nesse cartão, você consegue 3000 milhas para sua viagem!</string>
    <string name="smiles_card">Notamos que você tem o Cartão Smiles… Isso é ótimo!</string>
    <string name="months_left">Faltam 3 meses para viajar!</string>
    <string name="cheers">Você esta um passo mais perto de realizar a viagem dos seu sonhos!</string>
    <string name="congratulations">Parabens!</string>
    <string name="destiny">Porto de Galhina</string>
    <string name="using_money">Usando dinheiro:</string>
    <string name="money_1500">R$ 1500</string>
    <string name="using_miles">Usando milhas aereas:</string>
    <string name="_50_000">50.000</string>
    <string name="using_money_and_miles">Usando dinheiro e milhas aereas:</string>
    <string name="opotion_1">R$ 2.896</string>
    <string name="opotion_2">86.800 milhas</string>
    <string name="opotion_3">R$ 2.896 + 86.800 milhas</string>
    <string name="vacine_rate">Taxa de vacinação na cidade:</string>
    <string name="this_moment" tools:ignore="Typos">Nesse momento:</string>
    <string name="_15_percent">15%</string>
    <string name="expected_vacine">Esperado na data da viagem:</string>
    <string name="_89_percent">89%</string>
    <string name="trip_requirements">Requerimentos da viagem:</string>
    <string name="example_requirements">- Visto de entrada\n- Pasaporte\n- Mascar N95 ou PFF2\n- Vacina contra Covid</string>
    <string name="next_trips">Proximas Viagens</string>
    <string name="hello_user">Olá, Rafael!</string>
    <string name="you_have_badges">Você tem Selos!</string>
    <string name="first_planning">Primer planejamento</string>
    <string name="create_your_first_planning">Cria o seu primer planejamento</string>
    <string name="first_flight">Primer voo</string>
    <string name="first_flight_description">Realiza um voo planificado</string>
    <string name="first_pack">Primeiro pacote</string>
    <string name="first_pack_description">Cria seu primeiro pacote de voo + hotel</string>
</resources>