<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.sixthscreen.SixthFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_congratulations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/congratulations"
        android:textColor="@color/smiles_orange"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_second_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_congratulations"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="30dp"
        style="@style/DefaultTextView.Large"
        android:text="@string/cheers"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_months_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/months_left"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_second_text" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_smiles_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/smiles_card"
        style="@style/DefaultTextView.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_months_left" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_card"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="30dp"
        android:src="@drawable/ic_baseline_credit_card_24"
        android:tint="@color/smiles_orange"
        app:layout_constraintTop_toBottomOf="@+id/tv_smiles_card" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_consume_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:text="@string/use_creditcard"
        app:layout_constraintBottom_toBottomOf="@+id/iv_card"
        app:layout_constraintEnd_toStartOf="@+id/iv_card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_card" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_money"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="30dp"
        android:src="@drawable/ic_baseline_monetization_on_24"
        android:tint="@color/smiles_orange"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_card" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_use_miles"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:text="@string/use_miles"
        app:layout_constraintBottom_toBottomOf="@+id/iv_money"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_money"
        app:layout_constraintTop_toTopOf="@+id/iv_money" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_transport"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="30dp"
        android:src="@drawable/ic_baseline_emoji_transportation_24"
        android:tint="@color/smiles_orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_money" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_hire_transport"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:text="@string/hire_a_transport"
        app:layout_constraintBottom_toTopOf="@+id/btn_hire_car"
        app:layout_constraintEnd_toStartOf="@+id/iv_transport"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_transport"
        app:layout_constraintVertical_bias="0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_hire_car"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_transport"
        app:layout_constraintEnd_toEndOf="@+id/tv_hire_transport"
        app:layout_constraintStart_toStartOf="@+id/tv_hire_transport"
        app:layout_constraintTop_toBottomOf="@+id/tv_hire_transport"
        android:background="@android:color/transparent"
        android:text="@string/hire_here"
        android:textColor="@color/smiles_orange"
        android:foreground="@drawable/background_border_thin"/>

    <Button
        android:id="@+id/btn_go_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back_to_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_transport"
        android:layout_marginHorizontal="30dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>