<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewState"
            type="br.com.hacksmiles.ui.firstscreen.FirstFormViewState" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">


        <androidx.constraintlayout.widget.ConstraintLayout

            android:id="@+id/cl_form_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="30dp">


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vamos_planificar_a_sua_viagem"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/tv_title">

                <TextView
                    android:id="@+id/tv_how_many_people"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/quantas_pessoas" />

                <Spinner
                    android:id="@+id/sp_how_many_people"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_betwen_from_itens" />

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nome" />

                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_betwen_from_itens"
                    android:hint="@string/nome"
                    android:importantForAutofill="no"
                    android:inputType="text" />

                <TextView
                    android:id="@+id/tv_birth_day"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_betwen_from_itens"
                    android:text="@string/data_nascimento" />

                <EditText
                    android:id="@+id/calendar_birth_day"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/data_nascimento"
                    android:hint="@string/data_nascimento"
                    android:inputType="date" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_climatic_selector"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_betwen_from_itens"
                    android:text="@string/prefer_ncia_clim_tica"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_betwen_from_itens"
                        android:baselineAligned="false"
                        android:orientation="horizontal">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_weight="0.5">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:id="@+id/img_beach"
                                android:layout_width="match_parent"
                                android:layout_height="100dp"
                                android:scaleType="centerCrop"
                                android:src="@drawable/img_calor" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentStart="true"
                                android:layout_alignParentTop="true"
                                android:text="Praia"
                                android:textColor="@android:color/white" />
                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:id="@+id/img_snow"
                                android:layout_width="match_parent"
                                android:layout_height="100dp"
                                android:scaleType="centerCrop"
                                android:src="@drawable/img_frio" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentStart="true"
                                android:layout_alignParentTop="true"
                                android:text="Neve"
                                android:textColor="@android:color/white" />

                        </RelativeLayout>
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_betwen_from_itens"
                        android:baselineAligned="false"
                        android:orientation="horizontal">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_weight="0.5">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:id="@+id/img_city"
                                android:layout_width="match_parent"
                                android:layout_height="100dp"
                                android:scaleType="centerCrop"
                                android:src="@drawable/img_cidade" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentStart="true"
                                android:layout_alignParentTop="true"
                                android:text="Cidade"
                                android:textColor="@android:color/white" />
                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:id="@+id/img_mountains"
                                android:layout_width="match_parent"
                                android:layout_height="100dp"
                                android:scaleType="centerCrop"
                                android:src="@drawable/img_montanha" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentStart="true"
                                android:layout_alignParentTop="true"
                                android:text="Montanha"
                                android:textColor="@android:color/white" />

                        </RelativeLayout>
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/bt_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="Seguinte"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</layout>